<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homework_02.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_createTicket_label"
        android:id="@+id/button_createTicket"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_editTicket_label"
        android:id="@+id/button_editTicket"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_deleteTicket_label"
        android:id="@+id/button_deleteTicket"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_viewTicket_label"
        android:id="@+id/button_viewTicket"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_finish_label"
        android:id="@+id/button_finish"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_custCare_label"
        android:id="@+id/textView_custCare"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_weight="0.07"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:textIsSelectable="false" />

</LinearLayout>
