<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homework_02.CreateTicketActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="Name"
        android:inputType="text|textNoSuggestions"
        android:maxLength="20"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_source"
        android:layout_below="@+id/editText_name"
        android:layout_centerHorizontal="true"
        android:hint="Source" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_destination"
        android:layout_below="@+id/editText_source"
        android:layout_centerHorizontal="true"
        android:hint="Destination"
        android:ems="8" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_destination"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:id="@+id/RadioGroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trip: "
            android:id="@+id/textView_trip"
            android:phoneNumber="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_oneWay_label"
            android:id="@+id/radioButton_oneWay"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_roundTrip_label"
            android:id="@+id/radioButton_roundTrip"
            android:checked="false" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RadioGroup"
        android:id="@+id/editText_deptDate"
        android:hint="Departure Date"
        android:layout_marginTop="20dp"
        android:ems="10" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_deptTime"
        android:layout_below="@+id/RadioGroup"
        android:layout_alignParentRight="true"
        android:hint="Time"
        android:layout_marginTop="20dp"
        android:ems="5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_returnDate"
        android:layout_below="@+id/editText_deptDate"
        android:visibility="invisible"
        android:hint="Returning Date"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fadeScrollbars="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_returnTime"
        android:layout_below="@+id/editText_deptTime"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:hint="Time"
        android:ems="5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_printSummary"
        android:id="@+id/button_printSummary"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
